--- a/style.css
+++ b/style.css
@@ -35,17 +35,54 @@ header h1 {
   font-size: 24px;
   color: var(--primary);
 }
+/* RESET */
+/* NAVBAR */
+nav{
+  display:flex;
+  gap:20px;
+  transition:0.4s;
+}
+nav a{
+  color:white;
+  text-decoration:none;
+  font-size:16px;
+  font-weight:500;
+  transition:0.3s;
+}
+nav a:hover{color:#00b4ff;}
 
-nav a {
-  color: var(--text);
-  text-decoration: none;
-  margin: 0 15px;
-  transition: color 0.3s;
+/* TOGGLE */
+.nav-toggle{
+  display:none;
+  font-size:30px;
+  background:#111a33;
+  padding:6px 12px;
+  border-radius:10px;
+  cursor:pointer;
+  color:white;
 }
 
-nav a:hover {
-  color: var(--primary);
+/* MOBILE NAV */
+@media(max-width:768px){
+  nav{
+    position:absolute;
+    top:72px;
+    right:20px;
+    background:rgba(10,15,28,0.95);
+    backdrop-filter:blur(10px);
+    flex-direction:column;
+    width:200px;
+    padding:20px;
+    border-radius:14px;
+    display:none;
+  }
+  nav.show{display:flex;}
+
+  nav a{padding:10px 0;font-size:18px;}
+
+  .nav-toggle{display:block;}
 }
+
 
 section {
   min-height: 100vh;
